[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/pipeline/PipelineSlot.gd" id="1_script"]

[node name="PipelineSlot" type="PanelContainer"]
custom_minimum_size = Vector2(158, 114)
mouse_filter = 1
script = ExtResource("1_script")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="LabelSlotTitle" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "SLOT"

[node name="LabelModuleName" type="Label" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1
text = "<empty>"

[node name="BtnClear" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
text = "CLEAR"
